styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Quicksand:wght@300&family=Roboto+Slab:wght@300&display=swap");

/* All */

* {
  margin: 0;
  padding: 0;
}

body {
  background: #f2f2f2;
  color: #333;
  font-family: Quicksand;
}

.header {
  background-color: #fff;
  border-bottom: 2px solid coral;
}

.header h1 {
  text-align: center;
  padding: 10px 0;
}

.header h1:hover {
  cursor: pointer;
}

.load {
  text-align: center;
  padding: 20px;
  background: #fff;
  margin: 20px 0;
  font-size: large;
  font-weight: bold;
}

/* Homepage */

.search,
.not-found,
.news-details {
  max-width: 960px;
  text-align: center;
  margin: 0 auto;
}

.search-bar {
  display: flex;
}

.search-bar button {
  height: 40px;
}

label {
  display: block;
  font-size: 20px;
  text-align: center;
  margin: 20px 0 5px;
}

input {
  width: 100%;
  height: 35px;
  border-radius: 5px;
  margin-bottom: 10px;
}

button {
  padding: 10px 15px;
  background-color: coral;
  border: none;
  border-radius: 3px;
  border: 1px solid coral;
}

button:hover {
  background: #fff;
  cursor: pointer;
}

.paginate {
  display: flex;
  margin: 0 10px;
  padding: 10px 15px;
  justify-content: center;
  list-style-type: none;
}

.paginate a {
  margin: 0 10px;
  padding: 5px 10px;
  border: 1px solid #ccc;
  background: #fff;
}

.paginate a:hover {
  cursor: pointer;
  border: 1px solid coral;
}

.active-page a {
  color: #fff;
  background: coral;
}

.footer {
  background-color: coral;
  padding: 20px;
  margin: 20px 0px 0px;
  text-align: center;
}

.footer p {
  font-weight: bold;
  margin: 10px;
  padding-top: 10px;
}

/* News component */

.news-card {
  background-color: #fff;
  padding: 10px 10px;
  margin: 15px 10px;
}

.news-card:hover {
  cursor: pointer;
  border-left: 2px solid coral;
  border-right: 2px solid coral;
}

.info p {
  padding: 10px 0;
}

/* Details page */

.title h1 {
  text-align: center;
  padding: 20px;
  margin: 15px 0;
}

.title h1:hover {
  cursor: pointer;
}

.details,
.comment-details {
  display: flex;
  align-items: center;
  justify-content: center;
}

.details p,
.comment-details p {
  padding: 0 10px;
  margin: 0 10px 15px;
}

.comments h3 {
  padding-bottom: 3px;
  border-bottom: 2px solid coral;
  margin: 10px;
  font-size: 30px;
}

.comment-card {
  background-color: #fff;
  border-radius: 3px;
  padding: 15px 20px;
  margin: 10px;
}

.comment-card p {
  text-align: justify;
  margin: 5px 10px 20px;
}

/* 404 */
.showcase {
  background-color: #fff;
  border-bottom: 2px solid coral;
  border-right: 2px solid coral;
  border-left: 2px solid coral;
  border-radius: 1px;
  padding: 30px;
  height: 300px;
}

.showcase h1 {
  font-size: 150px;
  color: coral;
}

.showcase p {
  font-size: 35px;
  color: coral;
}

.redirect {
  margin: 30px;
}

.redirect a {
  font-size: 30px;
  color: #333;
  text-decoration: none;
  font-weight: bold;
}

.redirect a span {
  color: coral;
  text-decoration: underline;
}

@media (max-width: 480px) {
  .footer {
    padding: 10px;
  }
}

@media (max-width: 550px) {
}

